View Issue Details [ Jump to Notes ] [ Print ]
IDProjectCategoryView StatusDate SubmittedLast Update
0013204CMakeDocumentationpublic2012-05-09 09:432016-06-10 14:31
ReporterDave Abrahams 
Assigned ToKitware Robot 
PrioritynormalSeverityminorReproducibilityhave not tried
StatusclosedResolutionmoved 
PlatformOSOS Version
Product Version 
Target VersionCMake 2.8.12Fixed in Version 
Summary0013204: Docs don't say what happens to symlinks in copy_directory
DescriptionMost facilities that copy whole directory trees say what they do with symbolic links (i.e. follow or not). The docs for copy_directory don't. I don't know if this applies elsewhere, but a quick scan for similar omissions might be worthwhile.
TagsNo tags attached.
Attached Files

 Relationships
related to 0014609closedKitware Robot cmake -E copy and cmake -E copy_directory commands need an option to NOT follow symlinks on Linux 

  Notes
(0029644)
recryn (reporter)
2012-06-08 05:30

'cmake -E copy_directory some_dir dest_dir' does follow symlinks. That means it does not copy symlinks but the files or directories they point to.

I would consider this a bug since 'file (COPY some_dir DESTINATION dest_dir)' copies symlinks without following them. Because of the limitation of copy_directory you have to work around this by creating a custom copydir.cmake script,

--------8<-------------------------------------------------------
# copydir.cmake
# note the trailing slash after ${SOURCE_DIR}
file (COPY "${SOURCE_DIR}/" DESTINATION "${TARGET_DIR}")
------------------------------------------------------->8--------

and call this script instead of 'cmake -E copy_directory', e.g.;
cmake -DSOURCE_DIR=some_dir -DTARGET_DIR=dest_dir -P copydir.cmake
(0030434)
David Cole (manager)
2012-08-11 21:42

Sending old, never assigned issues to the backlog.

(The age of the bug, plus the fact that it's never been assigned to anyone means that nobody is actively working on it...)

If an issue you care about is sent to the backlog when you feel it should have been addressed in a different manner, please bring it up on the CMake mailing list for discussion. Sign up for the mailing list here, if you're not already on it: http://www.cmake.org/mailman/listinfo/cmake [^]

It's easy to re-activate a bug here if you can find a CMake developer who has the bandwidth to take it on, and ferry a fix through to our 'next' branch for dashboard testing.
(0031269)
David Cole (manager)
2012-10-18 11:17

These bugs were deferred from target version 2.8.10 to 2.8.11 based on the responses to this email thread on the CMake developer's mailing list:

  http://public.kitware.com/pipermail/cmake-developers/2012-October/005434.html [^]
(0034619)
irwin (reporter)
2013-12-01 15:14

See additional discussion in http://public.kitware.com/Bug/view.php?id=14609 [^]
(0042044)
Kitware Robot (administrator)
2016-06-10 14:28

Resolving issue as `moved`.

This issue tracker is no longer used. Further discussion of this issue may take place in the current CMake Issues page linked in the banner at the top of this page.

 Issue History
Date Modified Username Field Change
2012-05-09 09:43 Dave Abrahams New Issue
2012-06-08 05:30 recryn Note Added: 0029644
2012-08-11 21:42 David Cole Status new => backlog
2012-08-11 21:42 David Cole Note Added: 0030434
2012-08-14 11:22 David Cole Status backlog => new
2012-08-14 11:22 David Cole Target Version => CMake 2.8.10
2012-10-18 11:16 David Cole Target Version CMake 2.8.10 => CMake 2.8.11
2012-10-18 11:17 David Cole Note Added: 0031269
2013-02-13 13:40 Rolf Eike Beer Category (No Category) => Documentation
2013-05-17 09:33 Robert Maynard Target Version CMake 2.8.11 => CMake 2.8.12
2013-12-01 15:14 irwin Note Added: 0034619
2013-12-02 09:41 Brad King Relationship added related to 0014609
2016-06-10 14:28 Kitware Robot Note Added: 0042044
2016-06-10 14:28 Kitware Robot Status new => resolved
2016-06-10 14:28 Kitware Robot Resolution open => moved
2016-06-10 14:28 Kitware Robot Assigned To => Kitware Robot
2016-06-10 14:31 Kitware Robot Status resolved => closed


Copyright © 2000 - 2018 MantisBT Team