cmake: Upgrade 'cmake -E' commands description

Fixes: #13204